k8s/briefer-manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: briefer-api
spec:
  type: NodePort
  selector:
    app: briefer-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: briefer-web
spec:
  type: NodePort
  selector:
    app: briefer-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
spec:
  selector:
    app: briefer-jupyter
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: briefer-jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: briefer-jupyter
  template:
    metadata:
      labels:
        app: briefer-jupyter
    spec:
      containers:
      - name: jupyter-container
        image: briefercloud/briefer-jupyter
        command: ["sh", "-c", "jupyter server --ip=0.0.0.0 --ZMQChannelsWebsocketConnection.iopub_data_rate_limit=1.0e10 --ZMQChannelsWebsocketConnection.iopub_msg_rate_limit=1.0e6 --ServerApp.max_body_size=107374182400"]
        ports:
        - containerPort: 8888
        readinessProbe:
          httpGet:
            path: /api
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: briefer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: briefer-web
  template:
    metadata:
      labels:
        app: briefer-web
    spec:
      containers:
      - name: web-container
        image: briefercloud/briefer-web:v0.0.9
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: briefer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: briefer-api
  template:
    metadata:
      labels:
        app: briefer-api
    spec:
      containers:
      - name: api-container
        image: briefercloud/briefer-api:v0.0.9
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-briefer
  annotations:
    kubernetes.io/ingress.class: "kong"
    httpbin.ingress.kubernetes.io/rewrite-target: /
    konghq.com/plugins: "deny-external-ips"
    konghq.com/plugins: briefer-cors
spec:
  rules:
  - host: app.briefer.domain.internal
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: briefer-web
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-briefer
  annotations:
    kubernetes.io/ingress.class: "kong"
    httpbin.ingress.kubernetes.io/rewrite-target: /
    konghq.com/plugins: "deny-external-ips"
    konghq.com/plugins: briefer-cors
spec:
  rules:
  - host: api.briefer.domain.internal
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: briefer-api
            port:
              number: 8080
